fixed bug in index.html to improve spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,7 +464,7 @@
   } */
   
   /* col-md */
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1030px) {
 
     /* .poke-info-card {
       justify-content: center;
